# 42_Call_Me_Maybe

./: .gitignore  .mypy.ini  Makefile  README.md  pyproject.toml
docs/: defense.md  install-uv.md  weekly_plan.html
docs/ES/: README.md  defensa.md  plan_semanal.html
docs/algorithm/: example_1.py  example_vocab.py  example_vocab_2.py  restricted_decoding_algorithm.py
src/: __main__.py  constrained_dec.py  generator.py  models.py  tools.py  utils.py
