[project]
name = "42-call-me-maybe"
version = "0.1.0"
description = "Project call me maybe 42"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]

